<resources>
    <string name="app_name">Agronect</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_history">History</string>
    <string name="title_sharingpage">Sharing Page</string>
    <string name="title_profile">Profile</string>
    <string name="login">Masuk</string>
    <string name="login_ask">Belum Mempunyai Akun?</string>
    <string name="signup_ask">Sudah Memiliki Akun?</string>
    <string name="Daftar">Daftar di sini</string>
    <string name="Daftarbtn">Daftar</string>
    <string name="login_disini">Masuk di sini</string>
    <string name="password">Password</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="next">Lanjut</string>
    <string name="logout">logout</string>
    <string name="upload">Unggah</string>
    <string name="description">deskripsi</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="profil">Profil</string>
    <string name="simpan">Simpan</string>
    <string name="success_signup">Anda berhasil daftar</string>
    <string name="welcome">Selamat Datang</string>
    <string name="welcome_text"> Kami membantu Anda mendeteksi dan mencegah penyakit tanaman dengan cepat dan akurat. Mari ciptakan lingkungan hijau yang subur bersama!</string>
    <string name="success_login">Anda Berhasil Masuk</string>
    <string name="retry">Retry</string>
    <string name="empty_image">Masukkan berkas gambar terlebih dahulu</string>
    <string name="success_upload">Anda telah berhasil upload</string>
    <string name="add_your_description_here">Tambahkan Deskripsi disini</string>
    <string name="edit">Edit</string>
    <string name="editprofile">Edit Profile</string>
    <string name="ubah">Ubah Profile</string>
    <string name="halo">Halo, </string>
    <string name="text_klasifikasi">Tanaman apa  yang ingin kamu\nKlasifikasikan?</string>
    <string name="jagung">Jagung</string>
    <string name="kentang">Kentang</string>
    <string name="Singkong">Singkong\n</string>
    <string name="Pisang">Pisang</string>
    <string name="Jeruk">Jeruk</string>
    <string name="Padi">Padi</string>
    <string name="Cabai">Cabai</string>

    <string name="Apel">Apel</string>
    <string name="Ubah_Profil">Ubah Profil</string>
    <string name="selamat_datang">Selamat datang,</string>
    <string name="rizky">Rizky</string>
    <string name="unggah_gambar">Unggah Gambar</string>
    <string name="tombol_kembali">tombol kembali</string>
    <string name="invalid_email">Format Email Salah</string>
    <string name="error_password_requirement">Minimal 1 Huruf Kapital</string>
    <string name="success_profile_update">Update Berhasil</string>
    <string name="empty_image_warning">Image Kosong</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="masukkan_password_baru">Masukkan Password Baru</string>
    <string name="ulangi_password_baru">Ulangi Password Baru</string>
    <string name="masukkan_password_lama">Masukkan Password Lama</string>
    <string name="cari_sharing">Cari Sharing</string>
    <string name="sharing_page">Halaman Sharing</string>
    <string name="daftar">Daftar</string>
    <string name="success_post_update">Berhasil Update</string>
    <string name="sharing_anda">Sharing Anda</string>
    <string name="tomat">Tomat</string>
    <string name="prediction">Prediction</string>
    <string name="solution">Solution</string>
    <string name="confidence_score">Skor Confidence</string>
    <string name="halaman_history">Halaman History</string>

    <string-array name="data_name">
        <item>Anjing</item>
        <item>Jerapah</item>
        <item>Kelinci</item>
        <item>Kucing</item>
        <item>Kuda</item>
        <item>Penyu</item>
        <item>Rubah</item>
        <item>Rusa</item>
        <item>Singa</item>
        <item>Tupai</item>
    </string-array>

    <string-array name="data_description">
        <item>Salah seorang ulama dan khatib terkemuka di Masjid Besar Kasultanan Yogyakarta pada masa itu, dan ibu dari K.H. Ahmad Dahlan adalah puteri dari H. Ibrahim yang juga menjabat penghulu Kesultanan Ngayogyakarta Hadiningrat pada masa itu. KH. Ahmad Dahlan telah mempelopori kebangkitan ummat Islam untuk menyadari nasibnya sebagai bangsa terjajah yang masih harus belajar dan berbuat. </item>
        <item>Jenderal TNI Anumerta Ahmad Yani (juga dieja Achmad Yani; lahir di Purworejo, Jawa Tengah, 19 Juni 1922 – meninggal di Lubang Buaya, Jakarta, 1 Oktober 1965 pada umur 43 tahun) adalah komandan Tentara Nasional Indonesia Angkatan Darat, dan dibunuh oleh anggota Gerakan 30 September saat mencoba untuk menculik dia dari rumahnya.</item>
        <item>Sutomo (lahir di Surabaya, Jawa Timur, 3 Oktober 1920 – meninggal di Padang Arafah, Arab Saudi, 7 Oktober 1981 pada umur 61 tahun) lebih dikenal dengan sapaan akrab oleh rakyat sebagai Bung Tomo, adalah pahlawan yang terkenal karena peranannya dalam membangkitkan semangat rakyat untuk melawan kembalinya penjajah Belanda melalui tentara NICA, yang berakhir dengan pertempuran 10 November 1945 yang hingga kini diperingati sebagai Hari Pahlawan.</item>
        <item>Jenderal TNI (Purn.) Gatot Soebroto (lahir di Sumpiuh, Banyumas, Jawa Tengah, 10 Oktober 1907 – meninggal di Jakarta, 11 Juni 1962 pada umur 54 tahun) adalah tokoh perjuangan militer Indonesia dalam merebut kemerdekaan dan juga pahlawan nasional Indonesia. Ia dimakamkan di Ungaran, kabupaten Semarang.</item>
        <item>Raden Mas Soewardi Soerjaningrat (EBI: Suwardi Suryaningrat, sejak 1922 menjadi Ki Hadjar Dewantara, EBI: Ki Hajar Dewantara, beberapa menuliskan bunyi bahasa Jawanya dengan Ki Hajar Dewantoro; lahir di Pakualaman, 2 Mei 1889 – meninggal di Yogyakarta, 26 April 1959 pada umur 69 tahun; selanjutnya disingkat sebagai "Soewardi" atau "KHD") adalah aktivis pergerakan kemerdekaan Indonesia, kolumnis, politisi, dan pelopor pendidikan bagi kaum pribumi Indonesia dari zaman penjajahan Belanda. Ia adalah pendiri Perguruan Taman Siswa, suatu lembaga pendidikan yang memberikan kesempatan bagi para pribumi untuk bisa memperoleh hak pendidikan seperti halnya para priyayi maupun orang-orang Belanda.</item>
        <item>Dr.(HC) Drs. H. Mohammad Hatta (lahir dengan nama Mohammad Athar, dikenal sebagai Bung Hatta; lahir di Fort de Kock (sekarang Bukittinggi, Sumatera Barat), Hindia Belanda, 12 Agustus 1902 – meninggal di Jakarta, 14 Maret 1980 pada umur 77 tahun) adalah tokoh pejuang, negarawan, ekonom, dan juga Wakil Presiden Indonesia yang pertama. Ia bersama Soekarno memainkan peranan penting untuk memerdekakan bangsa Indonesia dari penjajahan Belanda sekaligus memproklamirkannya pada 17 Agustus 1945. Ia juga pernah menjabat sebagai Perdana Menteri dalam Kabinet Hatta I, Hatta II, dan RIS. Ia mundur dari jabatan wakil presiden pada tahun 1956, karena berselisih dengan Presiden Soekarno. Hatta juga dikenal sebagai Bapak Koperasi Indonesia.</item>
        <item>Jenderal Besar Raden Soedirman (EYD: Sudirman; lahir 24 Januari 1916 – meninggal 29 Januari 1950 pada umur 34 tahun) adalah seorang perwira tinggi Indonesia pada masa Revolusi Nasional Indonesia. Menjadi panglima besar Tentara Nasional Indonesia pertama, ia secara luas terus dihormati di Indonesia. Terlahir dari pasangan rakyat biasa di Purbalingga, Hindia Belanda, Soedirman diadopsi oleh pamannya yang seorang priyayi. Setelah keluarganya pindah ke Cilacap pada tahun 1916, Soedirman tumbuh menjadi seorang siswa rajin; ia sangat aktif dalam kegiatan ekstrakurikuler, termasuk mengikuti program kepanduan yang dijalankan oleh organisasi Islam Muhammadiyah. Saat di sekolah menengah, Soedirman mulai menunjukkan kemampuannya dalam memimpin dan berorganisasi, dan dihormati oleh masyarakat karena ketaatannya pada Islam. Setelah berhenti kuliah keguruan, pada 1936 ia mulai bekerja sebagai seorang guru, dan kemudian menjadi kepala sekolah, di sekolah dasar Muhammadiyah; ia juga aktif dalam kegiatan Muhammadiyah lainnya dan menjadi pemimpin Kelompok Pemuda Muhammadiyah pada tahun 1937. Setelah Jepang menduduki Hindia Belanda pada 1942, Soedirman tetap mengajar. Pada tahun 1944, ia bergabung dengan tentara Pembela Tanah Air (PETA) yang disponsori Jepang, menjabat sebagai komandan batalion di Banyumas. Selama menjabat, Soedirman bersama rekannya sesama prajurit melakukan pemberontakan, namun kemudian diasingkan ke Bogor.</item>
        <item>Dr.(H.C.) Ir. H. Soekarno (ER, EYD: Sukarno, nama lahir: Koesno Sosrodihardjo) (lahir di Surabaya, Jawa Timur, 6 Juni 1901 – meninggal di Jakarta, 21 Juni 1970 pada umur 69 tahun) adalah Presiden pertama Republik Indonesia yang menjabat pada periode 1945–1967. Ia memainkan peranan penting dalam memerdekakan bangsa Indonesia dari penjajahan Belanda. Ia adalah Proklamator Kemerdekaan Indonesia (bersama dengan Mohammad Hatta) yang terjadi pada tanggal 17 Agustus 1945. Soekarno adalah yang pertama kali mencetuskan konsep mengenai Pancasila sebagai dasar negara Indonesia dan ia sendiri yang menamainya.</item>
        <item>Prof. Mr. Dr. Soepomo (Ejaan Soewandi: Supomo; lahir di Sukoharjo, Jawa Tengah, 22 Januari 1903 – meninggal di Jakarta, 12 September 1958 pada umur 55 tahun) adalah seorang pahlawan nasional Indonesia. Soepomo dikenal sebagai arsitek Undang-undang Dasar 1945, bersama dengan Muhammad Yamin dan Soekarno.</item>
        <item>Prof. Mr. Dr. Soepomo (Ejaan Soewandi: Supomo; lahir di Sukoharjo, Jawa Tengah, 22 Januari 1903 – meninggal di Jakarta, 12 September 1958 pada umur 55 tahun) adalah seorang pahlawan nasional Indonesia. Soepomo dikenal sebagai arsitek Undang-undang Dasar 1945, bersama dengan Muhammad Yamin dan Soekarno.</item>
    </string-array>

    <integer-array name="data_photo">
        <item>@drawable/agronect</item>
        <item>@drawable/profile</item>
        <item>@drawable/walpapper</item>
        <item>@drawable/apple</item>
        <item>@drawable/forumdiskusi</item>
        <item>@drawable/background_intro</item>
        <item>@drawable/history</item>
        <item>@drawable/back</item>
        <item>@drawable/background_white</item>
        <item>@drawable/logo</item>

    </integer-array>

</resources>