<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/tv_profil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/title_profile"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:cardCornerRadius="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="75dp">

        <ImageView
            android:id="@+id/photo_profile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            android:src="@drawable/businessman"/>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textFullName"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/username"
            android:textColor="@color/blackbrown"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nameEditTextLayout"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blackbrown"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/fullname"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email"
            android:textColor="@color/blackbrown"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/emailEditTextLayout"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:textColor="@color/blackbrown"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/email" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editButton"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:backgroundTint="@color/brownbtn"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:text="@string/ubah"
            android:layout_marginEnd="24dp"
            app:cornerRadius="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_change_password"
            android:layout_width="160dp"
            android:layout_height="55dp"
            android:fontFamily="@font/poppins_medium"
            android:layout_gravity="center"
            android:backgroundTint="@color/brownbtn"
            android:textColor="@color/black"
            android:text="@string/ubah_password"
            app:cornerRadius="10dp"/>

    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/blackbrown"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:text="@string/logout"
        app:cornerRadius="10dp" />

</LinearLayout>