<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ui.editPassword.editPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="83dp"
            android:src="@drawable/background"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/reset_password"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_password_lama"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:padding="0dp"
        android:textColor="@color/black"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp">

        <com.example.agronect.ui.MyEditText
            android:id="@+id/oldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_marginEnd="8dp"
            android:minHeight="48dp"
            android:padding="0dp"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/masukkan_password_baru"
        android:layout_marginStart="24dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:padding="0dp"
        android:textColor="@color/black"
        app:endIconMode="password_toggle"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusTopStart="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">

        <com.example.agronect.ui.MyEditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:minHeight="48dp"
            android:padding="0dp"
            android:textSize="16sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ulangi_password_baru"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:endIconMode="password_toggle"
        android:textColor="@color/black"
        app:boxCornerRadiusBottomEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:boxCornerRadiusTopEnd="24dp"
        app:boxCornerRadiusTopStart="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.example.agronect.ui.MyEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:minHeight="48dp"
            android:padding="0dp"
            android:textSize="16sp"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentCheck"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_marginTop="30dp"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:textColor="@color/white"
        android:backgroundTint="@color/brownnew"
        android:fontFamily="@font/poppins_medium"
        android:layout_gravity="center"
        android:text="@string/simpan"
        app:cornerRadius="16dp" />

</LinearLayout>
