<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity"
    android:background="@drawable/walpapper"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="137dp"
        android:layout_height="107dp"
        android:layout_marginTop="192dp"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_medium"
        android:text="Selamat Datang di Agronect"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />

    <TextView
        android:id="@+id/tv_welcometext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/brown"
        android:text="@string/login"
        android:textColor="@color/blackbrown"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcometext"
        app:layout_constraintStart_toEndOf="@id/signupButton"
        app:layout_constraintVertical_bias="0.045"
        app:strokeColor="@color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signupButton"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:text="@string/Daftar"
        android:textColor="@color/blackbrown"
        android:textSize="15sp"
        app:backgroundTint="@color/brown"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcometext"
        app:layout_constraintVertical_bias="0.045" />

    <!--    </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>