<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:src="@drawable/background"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Ubah Sharing"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="95dp"
            android:textSize="20sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="16dp"
        android:background="@drawable/edit_text_border"
        android:contentDescription="@string/unggah_gambar"
        android:src="@drawable/baseline_image_24" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center">

        <ImageView
            android:id="@+id/iv_camera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:src="@drawable/camera" />

        <ImageView
            android:id="@+id/iv_galery"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:src="@drawable/galery"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textFullName"
        android:layout_width="161dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="Deskripsi"
        android:layout_marginStart="54dp"
        android:textColor="@color/blackbrown"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:inputType="textMultiLine"
        android:lines="10"
        android:gravity="top|start"
        android:background="@drawable/border_text"
        android:padding="10dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:hint="@string/add_your_description_here"
        android:importantForAutofill="no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_marginTop="10dp"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/brownnew"
        android:fontFamily="@font/poppins_medium"
        android:layout_gravity="center"
        android:text="@string/simpan"
        app:cornerRadius="16dp" />

</LinearLayout>